--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<header>
 						<h2>Events</h2>
 					</header>
-					<p>Check out our Calendar for up to date events that the IIT climbing club is hosting.  </p>
+					<p>Check out our Calendar for up to date events that the IIT climbing club is hosting. Some events are weekly climbing events, outdoor trips, social and climbing clinics.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -69,7 +69,7 @@
 					</header>
 
                     <div class="box container small">
-                    <iframe src="https://www.google.com/calendar/embed?src=iitclimbing%40gmail.com&ctz=America/Chicago" style="border: 0" width="750" height="300" frameborder="0" scrolling="no"></iframe>
+                    <iframe src="https://www.google.com/calendar/embed?src=iitclimbing%40gmail.com&ctz=America/Chicago" style="border: 0" width="750" height="300" ></iframe>
                     </div>
 				</div>
 				<a href="#social-media" class="button style2 down anchored">Next</a>
@@ -80,11 +80,11 @@
 			<section id="social-media" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum. 
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis 
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae urna.</p>
+						<h2>Social Media</h2>
+						<p>Check out </p>
 					</header>
+
+
 					
 					<!--
 						 Lightbox Gallery
