--- a/index.html
+++ b/index.html
@@ -81,30 +81,17 @@
 				<div class="content container">
 					<header>
 						<h2>Social Media</h2>
-						<p>Check out </p>
-					</header>
+						<p>Check out our facebook and flickr page. </p>
 
+
+
+					</header>
+                    <iframe src="https://www.flickr.com/photos/112532705@N06/12645506943/player/ae65c2e2b6"
+                            height="375" width="500"  frameborder="0"
+                            allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
 					
-					<!--
-						 Lightbox Gallery
-						 
-						 Powered by poptrox. Full docs here: https://github.com/n33/jquery.poptrox
-					-->
-						<div class="container small gallery">
-							<div class="row flush images">
-								<div class="6u"><a href="images/fulls/01.jpg" class="image full l"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a></div>
-								<div class="6u"><a href="images/fulls/02.jpg" class="image full r"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a></div>
-							</div>
-							<div class="row flush images">
-								<div class="6u"><a href="images/fulls/03.jpg" class="image full l"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a></div>
-								<div class="6u"><a href="images/fulls/04.jpg" class="image full r"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a></div>
-							</div>
-							<div class="row flush images">
-								<div class="6u"><a href="images/fulls/05.jpg" class="image full l"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a></div>
-								<div class="6u"><a href="images/fulls/06.jpg" class="image full r"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a></div>
-							</div>
-						</div>
+
 
 				</div>
 			</section>
