Grammar in the events section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<header>
 						<h2>IIT Climbing</h2>
 					</header>
-					<p>Welcome to <strong>IIT Climbing</strong> </p>
+					<p>Welcome to <strong>IIT Climbing website</strong> </p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -56,7 +56,7 @@
 					<header>
 						<h2>Events</h2>
 					</header>
-					<p>Check out our Calendar for up to date events that the IIT climbing club is hosting. Some events are weekly climbing events, outdoor trips, social and climbing clinics.</p>
+					<p>Check out our Calendar for up to date events that the climbing club is hosting. Some events include weekly climbing trips, outdoor trips, social and climbing clinics.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
