Grammar and image edits. Now working on contact form.
Future goals.

create same format page but different html file called events and each section describes each event.

Also add the maps places we've been thing

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 						<h2>Social Media</h2>
 						</header>
                     <iframe src="https://www.flickr.com/photos/112532705@N06/12645506943/player/ae65c2e2b6"
-                            height="475" width="700"  frameborder="0"
-                            allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                            height="475" width="700"></iframe>
 
 					
 
@@ -96,8 +95,8 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content container">
 					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<h2>Contact</h2>
+						<p>Send us an email with your questions/comments and we will get back to you as quick as possible. </p>
 					</header>
 					<div class="box container small">
 					
