Commented out the php script for mail and just added  mailto tag. Possibly revert back to php mail form once you get it working

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<div class="content container">
 					<header>
 						<h2>Contact</h2>
-						<p>Send us an email with your questions/comments and we will get back to you as quick as possible. </p>
+						<p>Send us an email with your questions/comments and we will get back to you as quick as possible. <a href="mailto:iitclimbing@gmail.com">Click here</a> to send an email. </p>
 					</header>
 					<div class="box container small">
 					
@@ -107,6 +107,8 @@
 							 point the "action" attribute to it (eg. action="http://mydomain.tld/mail.php").
 							 More on how it all works here: http://www.1stwebdesigner.com/tutorials/custom-php-contact-forms/
 						-->
+
+                        <!--
 							<form method="post" action="#">
 								<div class="row half">
 									<div class="6u"><input type="text" name="name" placeholder="Name" /></div>
@@ -122,7 +124,7 @@
 										</ul>
 									</div>
 								</div>
-							</form>
+							</form> -->
 
 					</div>
 				</div>
