Cleaned up the tags and fixed the bottom links

--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
 				     Use anything from here: http://fortawesome.github.io/Font-Awesome/cheatsheet/)
 				-->
 					<ul class="actions">
-						<li><a href="#" class="fa solo fa-twitter"><span>Twitter</span></a></li>
-						<li><a href="#" class="fa solo fa-facebook"><span>Facebook</span></a></li>
+						<!--<li><a href="#" class="fa solo fa-twitter"><span>Twitter</span></a></li>-->
+						<li><a href="https://www.facebook.com/groups/153189251392622/" class="fa solo fa-facebook"><span>Facebook</span></a></li>
 						<li><a href="#" class="fa solo fa-google-plus"><span>Google+</span></a></li>
-						<li><a href="#" class="fa solo fa-dribbble"><span>Dribbble</span></a></li>
-						<li><a href="#" class="fa solo fa-pinterest"><span>Pinterest</span></a></li>
-						<li><a href="#" class="fa solo fa-instagram"><span>Instagram</span></a></li>
-					</ul>
+						<!--<li><a href="#" class="fa solo fa-dribbble"><span>Dribbble</span></a></li>-->
+                        <li><a href="https://secure.flickr.com/photos/112532705@N06/sets" class="fa solo fa-flickr"><span>Flickr</span></a></li>
+                        <!--<li><a href="#" class="fa solo fa-instagram"><span>Instagram</span></a></li>-->
+                    </ul>
 
-				<!-- Menu -->
+                <!-- Menu -->
 					<ul class="menu">
 						<li>&copy; IIT Climbing</li>
 						<li>Design: <a href="http://html5up.net/">HTML5 UP</a> Edited/Mantained: Simon</li>
