Added a github icon for people to see and work on for future exec board

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 						<li><a href="#" class="fa solo fa-google-plus"><span>Google+</span></a></li>
 						<!--<li><a href="#" class="fa solo fa-dribbble"><span>Dribbble</span></a></li>-->
                         <li><a href="https://secure.flickr.com/photos/112532705@N06/sets" class="fa solo fa-flickr"><span>Flickr</span></a></li>
+                        <li><a href="https://github.com/shims506/IIT-Climbing-Website" class="fa solo fa-github"><span>GitHub</span></a></li>
                         <!--<li><a href="#" class="fa solo fa-instagram"><span>Instagram</span></a></li>-->
                     </ul>
 
