Working on social media icons on home page
Also edited the gcalendar to scale properly and will probably fit on mobile devices

--- a/index.html
+++ b/index.html
@@ -44,8 +44,14 @@
 						<h2>IIT Climbing</h2>
 					</header>
 					<p>Welcome to <strong>IIT Climbing website</strong> </p>
-					<footer>
-						<a href="#one" class="button style2 down">More</a>
+					<p>
+                    <p><div class="facebook-hover social-slide" align="center"></div>
+                    <div class="google-hover social-slide"></div>
+                    <div class="instagram-hover social-slide"></div>
+					</p>
+
+                    <footer>
+                  		<a href="#one" class="button style2 down">More</a>
 					</footer>
 				</div>
 			</section>
@@ -69,7 +75,7 @@
 					</header>
 
                     <div class="box container small">
-                    <iframe src="https://www.google.com/calendar/embed?src=iitclimbing%40gmail.com&ctz=America/Chicago" style="border: 0" width="750" height="300" ></iframe>
+                        <iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=300&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=iitclimbing%40gmail.com&amp;color=%23125A12&amp;ctz=America%2FChicago" style=" border-width:0 " width="100%" height="300" frameborder="0" scrolling="no"></iframe>
                     </div>
 				</div>
 				<a href="#social-media" class="button style2 down anchored">Next</a>
@@ -83,7 +89,7 @@
 						<h2>Social Media</h2>
 						</header>
                     <iframe src="https://www.flickr.com/photos/112532705@N06/12645506943/player/ae65c2e2b6"
-                            height="475" width="700"></iframe>
+                            height="350" width="60%"></iframe>
 
 					
 
