Fixed the centering issue and seems to be working good.
Now need to add the hawk link button.

--- a/index.html
+++ b/index.html
@@ -44,16 +44,35 @@
 						<h2>IIT Climbing</h2>
 					</header>
 					<p>Welcome to <strong>IIT Climbing website</strong> </p>
-					<p>
-                    <p><div class="facebook-hover social-slide" align="center"></div>
-                    <div class="google-hover social-slide"></div>
-                    <div class="instagram-hover social-slide"></div>
-					</p>
+
+
+
 
                     <footer>
                   		<a href="#one" class="button style2 down">More</a>
 					</footer>
+
+                    <div>
+                        <a href="https://www.facebook.com/groups/153189251392622/">
+                            <div class="facebook-hover social-slide"></div>
+                        </a>
+
+                        <a href="#">
+                        <div class="google-hover social-slide"></div>
+                        </a>
+
+
+                        <a href="https://secure.flickr.com/photos/112532705@N06/sets">
+                        <div class="instagram-hover social-slide"></div>
+                        </a>
+
+                        <-- add another logo of the hawk link here also add comments to each  image for those who cant see the images-->
+
+                    </div>
 				</div>
+
+
+
 			</section>
 		
 		<!-- One -->
