--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="instagram-hover social-slide"></div>
                         </a>
 
-                        <-- add another logo of the hawk link here also add comments to each  image for those who cant see the images-->
+                        <!-- add another logo of the hawk link here also add comments to each  image for those who cant see the images-->
 
                     </div>
 				</div>
