Added some social media icons onto the home section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                         <div class="instagram-hover social-slide"></div>
                         </a>
 
+                        <a href="https://iit.collegiatelink.net/organization/rockclimbingclub">
+                            <div class="hawklink-hover social-slide"></div>
+                        </a>
+
                         <!-- add another logo of the hawk link here also add comments to each  image for those who cant see the images-->
 
                     </div>
