--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro">Home</a></li>
-							<li><a href="#one">Events</a></li>
-							<li><a href="#two">Calendar</a></li>
+							<li><a href="#one">Calendar</a></li>
+							<li><a href="#two">Places</a></li>
 							<li><a href="#social-media">Social Media</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
@@ -43,7 +43,7 @@
 					<header>
 						<h2>IIT Climbing</h2>
 					</header>
-					<p>Welcome to <strong>IIT Climbing website</strong> </p>
+					<p>Welcome to <strong>IIT Climbing Website</strong> </p>
 
 
 
@@ -80,30 +80,44 @@
 			</section>
 		
 		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>Events</h2>
-					</header>
-					<p>Check out our Calendar for up to date events that the climbing club is hosting. Some events include weekly climbing trips, outdoor trips, social and climbing clinics.</p>
-				</div>
+			<section id="one" class="main style3 secondary">
+				<div class="content container">
+
+                        <header>
+                            <h2>Calendar</h2>
+                        </header>
+
+                        <div class="box container small">
+                            <iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=300&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=iitclimbing%40gmail.com&amp;color=%23125A12&amp;ctz=America%2FChicago" style=" border-width:0 " width="100%" height="300" frameborder="0" scrolling="no"></iframe>
+                        </div>
+
+
+                       </div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
 		
 		<!-- Two -->
 			<section id="two" class="main style3 secondary">
 				<div class="content container">
-					<header>
-						<h2>Calendar</h2>
-					</header>
+                    <header>
+                    <h2>Places</h2>
+                    </header>
 
-                    <div class="box container small">
-                        <iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=300&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=iitclimbing%40gmail.com&amp;color=%23125A12&amp;ctz=America%2FChicago" style=" border-width:0 " width="100%" height="300" frameborder="0" scrolling="no"></iframe>
-                    </div>
-				</div>
+
+                    <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zkOCqtIpk23M.k9H7OlOInxD8" width="80%" height="480"></iframe>
+
+
+
+                    <p>Here are some places that the climbing club has climbed at. If you would like to visit these places and climb check out our calendar for more information on events and trips.</p>
+
+
+                </div>
 				<a href="#social-media" class="button style2 down anchored">Next</a>
 			</section>
 
+
+
+        </section>
 
 		<!-- Work -->
 			<section id="social-media" class="main style3 primary">
