--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro">Home</a></li>
-							<li><a href="#one">Calendar</a></li>
+							<!--<li><a href="#one">Calendar</a></li>-->
 							<li><a href="#two">Places</a></li>
 							<li><a href="#social-media">Social Media</a></li>
 							<li><a href="#contact">Contact</a></li>
@@ -49,7 +49,7 @@
 
 
                     <footer>
-                  		<a href="#one" class="button style2 down">More</a>
+                  		<a href="#two" class="button style2 down">More</a>
 					</footer>
 
                     <div>
@@ -78,24 +78,8 @@
 
 
 			</section>
-		
 		<!-- One -->
-			<section id="one" class="main style3 secondary">
-				<div class="content container">
 
-                        <header>
-                            <h2>Calendar</h2>
-                        </header>
-
-                        <div class="box container small">
-                            <iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=300&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=iitclimbing%40gmail.com&amp;color=%23125A12&amp;ctz=America%2FChicago" style=" border-width:0 " width="100%" height="300" frameborder="0" scrolling="no"></iframe>
-                        </div>
-
-
-                       </div>
-				<a href="#two" class="button style2 down anchored">Next</a>
-			</section>
-		
 		<!-- Two -->
 			<section id="two" class="main style3 secondary">
 				<div class="content container">
