--- a/faq.html
+++ b/faq.html
@@ -11,12 +11,23 @@
     <script src="js/jquery.poptrox.min.js"></script>
     <script src="js/skel.min.js"></script>
     <script src="js/init.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+
+
+    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+
     <noscript>
         <link rel="stylesheet" href="css/skel-noscript.css" />
         <link rel="stylesheet" href="css/style.css" />
+        <link href="css/bootstrap.min.css" rel="stylesheet">
     </noscript>
     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-</head>
+
+
 </head>
 <body>
 
@@ -200,7 +211,7 @@
 
     .panel-heading [data-toggle="collapse"]:after {
         font-family: 'Glyphicons Halflings';
-        content: "e072"; /* "play" icon */
+        content: ""; /* "play" icon */
         float: right;
         color: #F58723;
         font-size: 18px;
