--- a/faq.html
+++ b/faq.html
@@ -31,15 +31,21 @@
 </head>
 <body>
 
+
 <div class="container">
+    <div>
+        <h1>IIT Climbing FAQ</h1>
+
+    </div>
+
     <br />
     <br />
     <br />
 
     <div class="alert alert-warning alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        This section contains a wealth of information, related to <strong>PrepBootstrap</strong> and its store. If you cannot find an answer to your question,
-        make sure to contact us.
+        This section contains a wealth of information, related to <strong>IIT Climbing</strong>. If you cannot find an answer to your question,
+        make sure to contact us. Also, if you see any errors please let us know as well.
     </div>
 
     <br />
@@ -49,43 +55,157 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Is account registration required?</a>
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">How do I sign up to the IIT Climbing Club and get on the mailing list?</a>
                 </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-                    Account registration at <strong>PrepBootstrap</strong> is only required if you will be selling or buying themes.
-                    This ensures a valid communication channel for all parties involved in any transactions.
+                    To sign up please fill out this <a href src="https://docs.google.com/forms/d/1E1XpfnQ2imJwZziO-F1TBkQ1890afZRnW5fr7mDjzjg/viewform">form</a>. This will also get you on our mailing list.
                 </div>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">Can I submit my own Bootstrap templates or themes?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">I have signed up for the mailing list, now what?</a>
                 </h4>
             </div>
             <div id="collapseTen" class="panel-collapse collapse">
                 <div class="panel-body">
-                    A lot of the content of the site has been submitted by the community. Whether it is a commercial element/template/theme
-                    or a free one, you are encouraged to contribute. All credits are published along with the resources.
+                    You can come to any of our events and learn to climb that we advertise in the weekly email.
+                    We also host beginner trips where the club hires professional climbers to lead a beginners clinic.
                 </div>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">What is the currency used for all transactions?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">Isn't climbing dangerous?</a>
                 </h4>
             </div>
             <div id="collapseEleven" class="panel-collapse collapse">
                 <div class="panel-body">
-                    All prices for themes, templates and other items, including each seller's or buyer's account balance are in <strong>USD</strong>
+                    Yes it is, but with advancements in climbing technologies the sport is relatively safe.
+                    This means as long as you follow safety guideline <!--<link to that section here --still under development>-->
+                    there is minimal chance of getting injured. </div>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse12">Do I need anything to climb?</a>
+                </h4>
+            </div>
+            <div id="collapse12" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Besides a good attitude and keeping safety in mind, you don't need anything.
+                    The club will lend out harness to climbers but we do suggest purchasing your own.
+                    Check Beginner Gear buying section. <!--<link this to that section>--></div>
+            </div>
+        </div>
+
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse13">What gear should I buy as a Beginner?</a>
+                </h4>
+            </div>
+            <div id="collapse13" class="panel-collapse collapse">
+                <div class="panel-body">
+                    There are three main things we would suggest. Harness, shoes and belay device with locking biner.
+                    For harness, go to a outdoors store (REI, Moosejaw, or Climbing gym) and try it on will be the best suggestion and they go for ~$40. As for shoes, La Sportiva Tarantulace Climbing Shoe is a great for the money, usually goes for around ~$75.
+                    Lastly for the belay device and locking biner, any reputable climbing company sell them together for around ~$25 .
+                    <br />
+                    So your looking at ~$140 total and if you take care of your gear this will last years.
+                    <br />
+                    <br />
+                    Black Diamond offers a beginners package for cheap. If the package is available, it will bring down the cost even more.</div>
+            </div>
+        </div>
+
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse14">What gear do I need for _______ Gym?</a>
+                </h4>
+            </div>
+            <div id="collapse14" class="panel-collapse collapse">
+                <div class="panel-body">
+                    For all gyms, please bring adequate clothing for getting there and for climbing. Most gyms have a bathroom/locker room where you could change.
+                    Also, please bring water and a snack. Most gyms do have drinking fountains but you never know.
+                    <br />
+                    <br />
+                    Bouldering (Hidden Peak) - Just bring climbing shoes
+                    <br />
+                    Bouldering/Rope (Vertical Endeavors, ClimbOn, Brooklyn Boulders, First Ascent) - Harness, Shoes, and Belay device
+                    <br />
+                    <br />
+                    *If you don't own this gear please let the club know.
                 </div>
             </div>
         </div>
 
-        <div class="faqHeader">Sellers</div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse15">Club gear doesn't fit me or there already spoken for, what are my options?</a>
+                </h4>
+            </div>
+            <div id="collapse15" class="panel-collapse collapse">
+                <div class="panel-body">
+
+                    You can rent from the climbing gym (about ~$5-15 depending on what your getting and at what gym. Or, you could buy your own gear. Check out "What gear should I Buy" Section.
+
+
+                </div>
+            </div>
+        </div>
+
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse16">When will I get reimbursed for driving?</a>
+                </h4>
+            </div>
+            <div id="collapse16" class="panel-collapse collapse">
+                <div class="panel-body">
+
+                    We will try to get you the money right after the trip. There maybe some delayed paper work so please be patient
+                    and remind us if you haven't received anything or got updated within two weeks after the trip.
+
+                </div>
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse17">Where do we climb outdoors?</a>
+                </h4>
+            </div>
+            <div id="collapse17" class="panel-collapse collapse">
+                <div class="panel-body">
+
+                    Pretty much everywhere in the US!
+
+                    <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zkOCqtIpk23M.k9H7OlOInxD8&z=4" width="80%" height="480"></iframe>
+
+
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="faqHeader">Outdoor Climbing</div>
+        <div>           Still under development.</div>
+        <!--
+
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -201,7 +321,9 @@
             </div>
         </div>
     </div>
+    -->
 </div>
+
 
 <style>
     .faqHeader {
