--- a/faq.html
+++ b/faq.html
@@ -30,7 +30,25 @@
 
 </head>
 <body>
+<!-- Header -->
+<header id="header">
 
+    <!-- Logo -->
+    <h5 id="logo"><a href="/~climbing/index.html">IIT Climbing</a></h5>
+
+    <!-- Nav -->
+    <nav id="nav">
+        <ul>
+            <li><a href="/~climbing/index.html#intro">Home</a></li>
+            <!--<li><a href="#one">Calendar</a></li>-->
+            <li><a href="/~climbing/index.html#two">Places</a></li>
+            <li><a href="/~climbing/index.html#social-media">Social Media</a></li>
+            <li><a href="/~climbing/index.html#contact">Contact</a></li>
+            <li><a href="/~climbing/faq.html">FAQ</a></li>
+        </ul>
+    </nav>
+
+</header>
 
 <div class="container">
     <div>
