--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 							<li><a href="#two">Places</a></li>
 							<li><a href="#social-media">Social Media</a></li>
 							<li><a href="#contact">Contact</a></li>
+							<li><a href="/~climbing/faq.html">FAQ</a></li>
 						</ul>
 					</nav>
 
