fixed grammar issues and still not done

--- a/faq.html
+++ b/faq.html
@@ -73,7 +73,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">How do I sign up to the IIT Climbing Club and get on the mailing list?</a>
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">How do I sign up for the IIT Climbing Club and get on the mailing list?</a>
                 </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse in">
@@ -90,8 +90,10 @@
             </div>
             <div id="collapseTen" class="panel-collapse collapse">
                 <div class="panel-body">
-                    You can come to any of our events and learn to climb that we advertise in the weekly email.
-                    We also host beginner trips where the club hires professional climbers to lead a beginners clinic.
+                    We send out an weekly email with the climbing activities for the given week. If you want to join any of the trips,
+                    please reply to our email saying so. It's first come first serve. Also, climbers of any skill level are welcome!
+                    <br />
+                    We do have specialty events such as outdoor events, beginner trips, and clinics which are prioritized for that given event.
                 </div>
             </div>
         </div>
@@ -103,7 +105,7 @@
             </div>
             <div id="collapseEleven" class="panel-collapse collapse">
                 <div class="panel-body">
-                    Yes it is, but with advancements in climbing technologies the sport is relatively safe.
+                    Yes it is, but with advancements in climbing technologies the sport is relatively safe. Our motto is that "safety is cool".
                     This means as long as you follow safety guideline <!--<link to that section here --still under development>-->
                     there is minimal chance of getting injured. </div>
             </div>
@@ -112,14 +114,24 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse12">Do I need anything to climb?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse12">What essential gear do I need to climb?</a>
                 </h4>
             </div>
             <div id="collapse12" class="panel-collapse collapse">
                 <div class="panel-body">
+
                     Besides a good attitude and keeping safety in mind, you don't need anything.
                     The club will lend out harness to climbers but we do suggest purchasing your own.
-                    Check Beginner Gear buying section. <!--<link this to that section>--></div>
+
+                    Please wear adequate clothing that will not limit your movements.
+                    Most gyms have a bathroom/fitting room were you can change. Also, please bring
+                    water and a snack. However, most gyms do have drinking fountains.
+
+
+                    Check Beginner Gear buying section. <!--<link this to that section>-->
+
+
+                </div>
             </div>
         </div>
 
