slowly converting everything to bootstrap
FAQ navbar has been updated

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
 	</head>
 	<body>
 
-		<!-- Header -->
-			<header id="header">
+    <!-- Header -->
+    <header id="header">
 
-				<!-- Logo -->
-					<h1 id="logo"><a href="#">IIT Climbing</a></h1>
-				
-				<!-- Nav -->
-					<nav id="nav">
-						<ul>
-							<li><a href="#intro">Home</a></li>
-							<!--<li><a href="#one">Calendar</a></li>-->
-							<li><a href="#two">Places</a></li>
-							<li><a href="#social-media">Social Media</a></li>
-							<li><a href="#contact">Contact</a></li>
-							<li><a href="/~climbing/faq.html">FAQ</a></li>
-						</ul>
-					</nav>
+        <!-- Logo -->
+        <h5 id="logo"><a href="/~climbing/index.html">IIT Climbing</a></h5>
 
-			</header>
+        <!-- Nav -->
+        <nav id="nav">
+            <ul class="nav nav-pills">
+                <li role="presentation"><a href="/~climbing/index.html#intro">Home</a></li>
+                <!--<li><a href="#one">Calendar</a></li>-->
+                <li role="presentation"><a href="/~climbing/index.html#two">Places</a></li>
+                <li role="presentation"><a href="/~climbing/index.html#social-media">Social Media</a></li>
+                <li role="presentation"><a href="/~climbing/index.html#contact">Contact</a></li>
+                <li role="presentation"><a href="/~climbing/faq.html">FAQ</a></li>
+            </ul>
+        </nav>
+
+    </header>
 			
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
