--- a/faq.html
+++ b/faq.html
@@ -21,8 +21,8 @@
     <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 
     <noscript>
-        <link rel="stylesheet" href="css/skel-noscript.css" />
-        <link rel="stylesheet" href="css/style.css" />
+        <!--<link rel="stylesheet" href="css/skel-noscript.css" />
+        <link rel="stylesheet" href="css/style.css" />-->
         <link href="css/bootstrap.min.css" rel="stylesheet">
     </noscript>
     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
@@ -33,18 +33,18 @@
 <!-- Header -->
 <header id="header">
 
-    <!-- Logo -->
-    <h5 id="logo"><a href="/~climbing/index.html">IIT Climbing</a></h5>
+    <!-- Logo --
+    <h5 id="logo"><a href="/~climbing/index.html">IIT Climbing</a></h5>-->
 
     <!-- Nav -->
     <nav id="nav">
-        <ul>
-            <li><a href="/~climbing/index.html#intro">Home</a></li>
+        <ul class="nav nav-pills">
+            <li role="presentation"><a href="/~climbing/index.html#intro">Home</a></li>
             <!--<li><a href="#one">Calendar</a></li>-->
-            <li><a href="/~climbing/index.html#two">Places</a></li>
-            <li><a href="/~climbing/index.html#social-media">Social Media</a></li>
-            <li><a href="/~climbing/index.html#contact">Contact</a></li>
-            <li><a href="/~climbing/faq.html">FAQ</a></li>
+            <li role="presentation"><a href="/~climbing/index.html#two">Places</a></li>
+            <li role="presentation"><a href="/~climbing/index.html#social-media">Social Media</a></li>
+            <li role="presentation"><a href="/~climbing/index.html#contact">Contact</a></li>
+            <li role="presentation"><a href="/~climbing/faq.html">FAQ</a></li>
         </ul>
     </nav>
 
