--- a/faq.html
+++ b/faq.html
@@ -6,47 +6,62 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-    <script src="js/jquery.min.js"></script>
+
+
+<!---- GOOOD -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+
+    <link rel="stylesheet" type="text/css" href="css/newstyle.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
     <script src="js/jquery.poptrox.min.js"></script>
-    <script src="js/skel.min.js"></script>
-    <script src="js/init.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
-
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
-
-    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-
-    <noscript>
-        <!--<link rel="stylesheet" href="css/skel-noscript.css" />
-        <link rel="stylesheet" href="css/style.css" />-->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-    </noscript>
-    <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 
 
 </head>
 <body>
-<!-- Header -->
-<header id="header">
+<!------------------------NAV BAR--------------------------------->
+<nav id="nav">
+    <ul class="nav nav-pills">
+        <li role="presentation"><a href="/~climbing/index.html">Home</a></li>
+        <!--<li><a href="#one">Calendar</a></li>-->
+        <li role="presentation"><a href="https://www.google.com/maps/d/viewer?mid=zkOCqtIpk23M.k9H7OlOInxD8">Places</a></li>
 
-    <!-- Logo --
-    <h5 id="logo"><a href="/~climbing/index.html">IIT Climbing</a></h5>-->
+        <li role="presentation" class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Social Media <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
 
-    <!-- Nav -->
-    <nav id="nav">
-        <ul class="nav nav-pills">
-            <li role="presentation"><a href="/~climbing/index.html#intro">Home</a></li>
-            <!--<li><a href="#one">Calendar</a></li>-->
-            <li role="presentation"><a href="/~climbing/index.html#two">Places</a></li>
-            <li role="presentation"><a href="/~climbing/index.html#social-media">Social Media</a></li>
-            <li role="presentation"><a href="/~climbing/index.html#contact">Contact</a></li>
-            <li role="presentation"><a href="/~climbing/faq.html">FAQ</a></li>
-        </ul>
-    </nav>
+                <li class="dropdown-header">Facebook</li>
+                <li><a href="https://www.facebook.com/pages/IIT-Rock-Climbing-Club/587268984728875">Main</a></li>
+                <li><a href="https://www.facebook.com/groups/153189251392622/">Community</a></li>
+
+
+                <li class="divider"></li>
+
+                <li class="dropdown-header">Images/Video</li>
+                <li><a href="https://secure.flickr.com/photos/112532705@N06/sets">Flickr</a></li>
+                <li><a href="#">YouTube</a></li>
+
+                <li class="divider"></li>
+                <li class="dropdown-header">Other</li>
+                <li><a href="https://iit.collegiatelink.net/organization/rockclimbingclub">HawkLink</a></li>
+
+
+            </ul>
+        </li>
+
+        <li role="presentation"><a href="#">Contact</a></li>
+        <li role="presentation"><a href="/~climbing/faq.html">FAQ</a></li>
+    </ul>
+</nav>
+
+
+
 
 </header>
 
@@ -386,6 +401,9 @@
         color: #454444;
     }
 </style>
+
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 
 </body>
