--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 
+<!------------------------NAV BAR--------------------------------->
 <nav id="nav">
     <ul class="nav nav-pills">
         <li role="presentation"><a href="/~climbing/index.html">Home</a></li>
@@ -51,6 +52,11 @@
         <li role="presentation"><a href="/~climbing/faq.html">FAQ</a></li>
     </ul>
 </nav>
+
+<!------------------------END NAV BAR--------------------------------->
+
+
+
 
 <!--begin bg-carousel-->
 <div id="bg-fade-carousel" class="carousel slide carousel-fade" data-ride="carousel">
