spiced up the special events section to be in boxes.
Visual apearance modification

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
     <link rel="stylesheet" type="text/css" href="css/newstyle.css">
+    <link rel="stylesheet" type="text/css" href="css/events.css">
+
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
@@ -77,7 +79,7 @@
         <!--<span style="color: white;"><p class="lead">What to climb next?</p></span>-->
         <p></p>
         <a class="btn btn-lg btn-info fp-buttons" href="#">
-            <span class="fa fa-dollar"></span> Weeks Events
+            <span class="fa"></span> Weeks Events
         </a>
         <a class="btn btn-lg btn-info fp-buttons" href="https://docs.google.com/forms/d/1E1XpfnQ2imJwZziO-F1TBkQ1890afZRnW5fr7mDjzjg/viewform?formkey=dE4wVHJTLUdvcjdEbk50azFaQy1ISlE6MQ#gid=0">
             <span class="fa fa-check"></span> Sign Up
@@ -94,27 +96,73 @@
     <!-- Example row of columns -->
     <div class="row">
         <div class="col-md-4">
-            <div class="fa fa-paw fa-3x circles"></div>
-            <h2>Ice Climbing</h2>
-            <p>When: February 27-29</p>
-            <p>Where: Sand Stone, MN</p>
-            <p>*Must have prior climbing experience</p>
+
+
+            <div class="panel panel-default event">
+                <div class="panel-body">
+                    <div class="rsvp col-xs-3 col-sm-3">
+                        <i>27</i>
+                        <i>FEB</i>
+                    </div>
+                    <div class="info col-xs-8 col-sm-7">
+                        Ice Climbing
+
+                        <div> <p>Where: Sand Stone, MN</p>
+                            <p>*Must have prior climbing experience</p></div> <!-- insert text here-->
+
+                        <p><a class="btn btn-default" href="#" role="button">More Info »</a></p> <!-- link to the flyer i made-->
+
+                    </div>
+
+                </div>
+            </div>
+
+
 
             <p><a class="btn btn-default" href="#" role="button">More Info »</a></p> <!-- link to the flyer i made-->
         </div>
         <div class="col-md-4">
-            <div class="fa fa-heart fa-3x circles"></div>
-            <h2>Spring Break</h2>
-            <p>Where: Red River Gorge  Slade, KY</p>
-            <p>When: ~ March 13-20</p>
-            <p><a class="btn btn-default" href="#" role="button">More Info »</a></p>
+            <div class="panel panel-default event">
+                <div class="panel-body">
+                    <div class="rsvp col-xs-3 col-sm-3">
+                        <i>13</i>
+                        <i>MAR</i>
+                    </div>
+                    <div class="info col-xs-8 col-sm-7">
+                        Spring Break
+
+                        <div><p>Where: Red River Gorge  Slade, KY</p></div> <!-- insert text here-->
+
+                        <p><a class="btn btn-default" href="#" role="button">More Info »</a></p> <!-- link to the flyer i made-->
+
+                    </div>
+
+                </div>
+            </div>
+
         </div>
+
         <div class="col-md-4">
-            <div class="fa fa-book fa-3x circles"></div>
-            <h2>Lock-In</h2>
-            <p>When: </p>
-            <p>Where: </p>
-            <p><a class="btn btn-default" href="#" role="button">More Info »</a></p>
+            <!------- Beginning of Event panel --->
+            <div class="panel panel-default event">
+                <div class="panel-body">
+                    <div class="rsvp col-xs-3 col-sm-3">
+                        <i>18</i>
+                        <i>NOV</i>
+                    </div>
+                    <div class="info col-xs-8 col-sm-7">
+                        Lock-In
+
+                        <div><p>Test </p></div> <!-- insert text here-->
+
+                        <p><a class="btn btn-default" href="#" role="button">More Info »</a></p> <!-- link to the flyer i made-->
+
+                    </div>
+
+                </div>
+            </div>
+
+            <!---- End event pannel -->
         </div>
     </div>
 
