changed some text in the events section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <ul class="nav nav-pills">
         <li role="presentation"><a href="/~climbing/index.html">Home</a></li>
         <!--<li><a href="#one">Calendar</a></li>-->
+        <li role="presentation"><a href="#">Events</a></li>
+
         <li role="presentation"><a href="https://www.google.com/maps/d/viewer?mid=zkOCqtIpk23M.k9H7OlOInxD8">Places</a></li>
 
         <li role="presentation" class="dropdown">
@@ -74,7 +76,7 @@
             <div class="slide3"></div>
         </div>
     </div><!-- .carousel-inner -->
-    <div class="container carousel-overlay text-center">
+    <div class="container carousel-overlay text-center hidden-xs">
         <span style="color: white; font-size: 75px"><b>IIT Climbing</b></span>
         <!--<span style="color: white;"><p class="lead">What to climb next?</p></span>-->
         <p></p>
@@ -118,8 +120,6 @@
             </div>
 
 
-
-            <p><a class="btn btn-default" href="#" role="button">More Info »</a></p> <!-- link to the flyer i made-->
         </div>
         <div class="col-md-4">
             <div class="panel panel-default event">
@@ -131,7 +131,7 @@
                     <div class="info col-xs-8 col-sm-7">
                         Spring Break
 
-                        <div><p>Where: Red River Gorge  Slade, KY</p></div> <!-- insert text here-->
+                        <div><p>Red River Gorge</p><p>Where: Slade, KY</p></div> <!-- insert text here-->
 
                         <p><a class="btn btn-default" href="#" role="button">More Info »</a></p> <!-- link to the flyer i made-->
 
@@ -147,8 +147,8 @@
             <div class="panel panel-default event">
                 <div class="panel-body">
                     <div class="rsvp col-xs-3 col-sm-3">
-                        <i>18</i>
-                        <i>NOV</i>
+                        <i>?</i>
+                        <i>TBA</i>
                     </div>
                     <div class="info col-xs-8 col-sm-7">
                         Lock-In
