--- a/faq.html
+++ b/faq.html
@@ -30,6 +30,10 @@
     <ul class="nav nav-pills">
         <li role="presentation"><a href="/~climbing/index.html">Home</a></li>
         <!--<li><a href="#one">Calendar</a></li>-->
+        <li role="presentation"><a href="#">Events</a></li>
+        <li role="presentation"><a href="gyms.html">Gyms</a></li>
+
+
         <li role="presentation"><a href="https://www.google.com/maps/d/viewer?mid=zkOCqtIpk23M.k9H7OlOInxD8">Places</a></li>
 
         <li role="presentation" class="dropdown">
@@ -59,6 +63,8 @@
         <li role="presentation"><a href="/~climbing/faq.html">FAQ</a></li>
     </ul>
 </nav>
+
+<!------------------------END NAV BAR--------------------------------->
 
 
 
