added sleeping in sub zero section

--- a/iceclimb.html
+++ b/iceclimb.html
@@ -89,9 +89,9 @@
                         <li><strong>T-shirt – </strong>Synthetic, quick-drying</li>
                         <li><strong>Lightweight Fleece Shirt – </strong>For example, the Patagonia R1 Hoody</li>
                         <li><strong>Softshell Jacket – </strong>Ex: Mammut Ultimate Alpine Hoody</li>
-                        <li><strong>Softshell Pants &#8211; </strong>Courmayeur Advanced Pants</li>
+                        <li><strong>Softshell Pants* </strong>Courmayeur Advanced Pants or as long as you have some type of water resistant pants</li>
                         <li><strong>Shell Pants – </strong>Waterproof, breathable pants with a full-length side-zipper for putting on over boots when the weather gets severe. Gore-Tex is one such material used by many manufacturers.</li>
-                        <li><strong>Shell jacket – </strong>Requires a helmet-compatible hood.</li>
+                        <li><strong>Shell jacket – </strong>A helmet-compatible hood would be preferred.</li>
                         <li><strong>Insulated jacket –</strong> Required, with a helmet-compatible hood and either down or Primaloft insulation. For example, Mammut’s Rime Pro Jacket. (Micro-puff jackets are too light for this application.)</li>
                         <li><strong>Lightweight Gloves –</strong> Windproof gloves, for warmer conditions. For example, the Black Diamond Arc</li>
                         <li><strong>Mediumweight Gloves – </strong>Lightly insulated. For example, Black Diamond&#8217;s Kingpin glove.</li>
@@ -100,7 +100,7 @@
                         <li><strong>Scarf – </strong>Protection from wind, cold and sun.</li>
                         <li><strong>Gaiters* – </strong>For soft, slushy snow conditions. OR brand work best over plastic mountaineering boots.</li>
                     </ul>
-
+                    <p>* symbol stands for its optional</p>
                 </div>
             </div>
         </div>
@@ -144,6 +144,31 @@
 
         </div>
 
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse3">Sleeping in Sub Zero Temps</a>
+                </h4>
+            </div>
+            <div id="collapse3" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <ul>
+                        <li><strong>Wear warm clothes - </strong> sleep with a hat on and other warm clothes</li>
+                        <li><strong>Warm sleeping bag - </strong> possible bring two sleeping bags</li>
+                        <li><strong>Sleeping Pad - </strong> the ground is cold</li>
+                        <li><strong>Drink warm beverages -</strong> Throughout the night drink hot tea, coffee, or happy juice to keep warm</li>
+                        <li><strong>Sleep like penguins -</strong> keep warm by sleeping close with others in a small tent</li>
+                        <li><strong>Next days clothes -</strong> put next days clothes inside sleeping bag to insulate you while you sleep and they'll be warm the next day</li>
+
+
+
+
+                    </ul>
+
+                </div>
+            </div>
+
+        </div>
 
         </div>
     </div>
