modified navbar to be responsive in mobile platfrom

--- a/events.html
+++ b/events.html
@@ -21,45 +21,51 @@
 <body>
 
 <!------------------------NAV BAR--------------------------------->
-<nav id="nav">
-    <ul class="nav nav-pills">
-        <li role="presentation"><a href="/~climbing/index.html">Home</a></li>
-        <!--<li><a href="#one">Calendar</a></li>-->
-        <li role="presentation"><a href="#">Events</a></li>
-        <li role="presentation"><a href="gyms.html">Gyms</a></li>
+<nav class="navbar navbar-default navbar-fixed-top">
+
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <ul class="nav nav-pills">
+                <li role="presentation"><a href="/~climbing/index.html">Home</a></li>
+                <!--<li><a href="#one">Calendar</a></li>-->
+                <li role="presentation"><a href="#">Events</a></li>
+                <li role="presentation"><a href="gyms.html">Gyms</a></li>
 
 
-        <li role="presentation"><a href="https://www.google.com/maps/d/viewer?mid=zkOCqtIpk23M.k9H7OlOInxD8">Places</a></li>
+                <li role="presentation"><a href="https://www.google.com/maps/d/viewer?mid=zkOCqtIpk23M.k9H7OlOInxD8">Places</a></li>
 
-        <li role="presentation" class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Social Media <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
+                <li role="presentation" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Social Media <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
 
-                <li class="dropdown-header">Facebook</li>
-                <li><a href="https://www.facebook.com/pages/IIT-Rock-Climbing-Club/587268984728875">Main</a></li>
-                <li><a href="https://www.facebook.com/groups/153189251392622/">Community</a></li>
-
-
-                <li class="divider"></li>
-
-                <li class="dropdown-header">Images/Video</li>
-                <li><a href="https://secure.flickr.com/photos/112532705@N06/sets">Flickr</a></li>
-                <li><a href="#">YouTube</a></li>
-
-                <li class="divider"></li>
-                <li class="dropdown-header">Other</li>
-                <li><a href="https://iit.collegiatelink.net/organization/rockclimbingclub">HawkLink</a></li>
+                        <li class="dropdown-header">Facebook</li>
+                        <li><a href="https://www.facebook.com/pages/IIT-Rock-Climbing-Club/587268984728875">Main</a></li>
+                        <li><a href="https://www.facebook.com/groups/153189251392622/">Community</a></li>
 
 
+                        <li class="divider"></li>
+
+                        <li class="dropdown-header">Images/Video</li>
+                        <li><a href="https://secure.flickr.com/photos/112532705@N06/sets">Flickr</a></li>
+                        <li><a href="#">YouTube</a></li>
+
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Other</li>
+                        <li><a href="https://iit.collegiatelink.net/organization/rockclimbingclub">HawkLink</a></li>
+
+
+                    </ul>
+                </li>
+
+                <li role="presentation"><a href="#">Contact</a></li>
+                <li role="presentation"><a href="/~climbing/faq.html">FAQ</a></li>
             </ul>
-        </li>
-
-        <li role="presentation"><a href="#">Contact</a></li>
-        <li role="presentation"><a href="/~climbing/faq.html">FAQ</a></li>
-    </ul>
+        </div>
+    </div>
 </nav>
 
 <!------------------------END NAV BAR--------------------------------->
+
 
 
 
