--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 <body>
 
 <!------------------------NAV BAR--------------------------------->
-<nav id="nav">
+<nav class="navbar navbar-default navbar-fixed-top">
+
+    <div class="container-fluid">
+        <div class="navbar-header">
     <ul class="nav nav-pills">
         <li role="presentation"><a href="/~climbing/index.html">Home</a></li>
         <!--<li><a href="#one">Calendar</a></li>-->
@@ -57,6 +60,8 @@
         <li role="presentation"><a href="#">Contact</a></li>
         <li role="presentation"><a href="/~climbing/faq.html">FAQ</a></li>
     </ul>
+        </div>
+        </div>
 </nav>
 
 <!------------------------END NAV BAR--------------------------------->
