added break tags so that the content of page isn't covered by header. Solution seems to be working

--- a/faq.html
+++ b/faq.html
@@ -73,8 +73,10 @@
 
 
 
-
-
+</div>
+<br />
+<br />
+<br />
 <div class="container">
     <div>
         <h1>IIT Climbing FAQ</h1>
@@ -259,6 +261,7 @@
 
 
     </div>
+</div>
 </div>
 
 <style>
