--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
@@ -38,7 +40,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Social Media <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
 
-                <li class="dropdown-header">Facebook</li>
+                <li class="dropdown-header"><i class="fa fa-facebook"></i>acebook</li>
                 <li><a href="https://www.facebook.com/pages/IIT-Rock-Climbing-Club/587268984728875">Main</a></li>
                 <li><a href="https://www.facebook.com/groups/153189251392622/">Community</a></li>
 
@@ -46,8 +48,8 @@
                 <li class="divider"></li>
 
                 <li class="dropdown-header">Images/Video</li>
-                <li><a href="https://secure.flickr.com/photos/112532705@N06/sets">Flickr</a></li>
-                <li><a href="#">YouTube</a></li>
+                <li><a href="https://secure.flickr.com/photos/112532705@N06/sets"><i class="fa fa-flickr"></i> Flickr</a></li>
+                <li><a href="#"><i class="fa fa-youtube"></i> YouTube</a></li>
 
                 <li class="divider"></li>
                 <li class="dropdown-header">Other</li>
@@ -222,7 +224,7 @@
 <!-- FOOTER -->
 <footer class="container-fluid">
     <p class="pull-right"><a href="#">Back to top</a></p>
-    <p>2015 IIT Climbing <a href="/~climbing/LICENSE">Apache License 2.0</a> · <a href="https://github.com/IIT-Climbing/IIT-Climbing-Website">Github</a></p>
+    <p>2015 IIT Climbing <a href="/~climbing/LICENSE">Apache License 2.0</a> · <a href="https://github.com/IIT-Climbing/IIT-Climbing-Website"><i class="fa fa-github-square"></i> Github</a></p>
 
 </footer>
 
