added new events to the special events row

--- a/index.html
+++ b/index.html
@@ -106,65 +106,21 @@
     <h1>Special Events</h1>
     <!-- Example row of columns -->
     <div class="row">
-        <div class="col-md-4">
-
-
-            <div class="panel panel-default event">
-                <div class="panel-body">
-                    <div class="rsvp col-xs-3 col-sm-3">
-                        <i>27</i>
-                        <i>FEB</i>
-                    </div>
-                    <div class="info col-xs-8 col-sm-7">
-                        Ice Climbing
-
-                        <div> <p>Where: Sand Stone, MN</p>
-                            <p>*Must have prior climbing experience</p></div> <!-- insert text here-->
-
-                        <p><a class="btn btn-default" href="#" role="button">More Info »</a></p> <!-- link to the flyer i made-->
-
-                    </div>
-
-                </div>
-            </div>
-
-
-        </div>
-        <div class="col-md-4">
-            <div class="panel panel-default event">
-                <div class="panel-body">
-                    <div class="rsvp col-xs-3 col-sm-3">
-                        <i>13</i>
-                        <i>MAR</i>
-                    </div>
-                    <div class="info col-xs-8 col-sm-7">
-                        Spring Break
-
-                        <div><p>Red River Gorge</p><p>Where: Slade, KY</p></div> <!-- insert text here-->
-
-                        <p><a class="btn btn-default" href="#" role="button">More Info »</a></p> <!-- link to the flyer i made-->
-
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
 
         <div class="col-md-4">
             <!------- Beginning of Event panel --->
             <div class="panel panel-default event">
                 <div class="panel-body">
                     <div class="rsvp col-xs-3 col-sm-3">
-                        <i>?</i>
-                        <i>TBA</i>
+                        <i>3</i>
+                        <i>APR</i>
                     </div>
                     <div class="info col-xs-8 col-sm-7">
                         Lock-In
 
-                        <div><p>Test </p></div> <!-- insert text here-->
+                        <div><p>Spend an entire night at ClimbOn! </p></div> <!-- insert text here-->
 
-                        <p><a class="btn btn-default" href="#" role="button">More Info »</a></p> <!-- link to the flyer i made-->
+                        <p><a class="btn btn-default" href="https://docs.google.com/forms/d/1mD2iESriTX3PotGr5u0Sn549jjiQ8LRkQp4AIywKJ4Y/viewform" role="button">More Info »</a></p> <!-- link to the flyer i made-->
 
                     </div>
 
@@ -173,6 +129,44 @@
 
             <!---- End event pannel -->
         </div>
+
+        <div class="col-md-4">
+            <div class="panel panel-default event">
+                <div class="panel-body">
+                    <div class="rsvp col-xs-3 col-sm-3">
+                        <i>20</i>
+                        <i>MAR</i>
+                    </div>
+                    <div class="info col-xs-8 col-sm-7">
+                        Picture Rocks
+                        <div> <p>This is in Iowa not to far from home.</p></div>
+
+                        <p><a class="btn btn-default" href="https://docs.google.com/forms/d/1X-KJRkUWuMre81ZMYpcrC6bn5SG9ASVcG4h_9N8tMFg/viewform" role="button">More Info »</a></p> <!-- link to the flyer i made-->
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="panel panel-default event">
+                <div class="panel-body">
+                    <div class="rsvp col-xs-3 col-sm-3">
+                        <i>17</i>
+                        <i>MAY</i>
+                    </div>
+                    <div class="info col-xs-8 col-sm-7">
+                        Summer Trip
+                        <div><p>West Coast</p><p>Red Rocks, Joshua Tree and many more.</p></div> <!-- insert text here-->
+
+                        <p><a class="btn btn-default" href="https://docs.google.com/forms/d/16VlBCnNg-LLZlNjaHfCi-nRab0a6xYwMMEo3C_psgSI/viewform" role="button">More Info »</a></p> <!-- link to the flyer i made-->
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
     <!-- START THE FEATURETTES -->
