Updated the index to remove west coast trip to dl and pic rocks Also updated date to apr 10 on pictured rocks

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <div class="panel panel-default event">
                 <div class="panel-body">
                     <div class="rsvp col-xs-3 col-sm-3">
-                        <i>20</i>
-                        <i>MAR</i>
+                        <i>10</i>
+                        <i>APR</i>
                     </div>
                     <div class="info col-xs-8 col-sm-7">
                         Picture Rocks
@@ -153,14 +153,14 @@
             <div class="panel panel-default event">
                 <div class="panel-body">
                     <div class="rsvp col-xs-3 col-sm-3">
-                        <i>17</i>
+                        <i>?</i>
                         <i>MAY</i>
                     </div>
                     <div class="info col-xs-8 col-sm-7">
                         Summer Trip
-                        <div><p>West Coast</p><p>Red Rocks, Joshua Tree and many more.</p></div> <!-- insert text here-->
+                        <div><p>Devils Lake and Pictured rocks?</p></div> <!-- insert text here-->
 
-                        <p><a class="btn btn-default" href="https://docs.google.com/forms/d/16VlBCnNg-LLZlNjaHfCi-nRab0a6xYwMMEo3C_psgSI/viewform" role="button">More Info »</a></p> <!-- link to the flyer i made-->
+                        <p><a class="btn btn-default" href="#" role="button">More Info »</a></p> <!-- link to the flyer i made-->
                     </div>
                 </div>
             </div>
